# film-grab-downloader

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  download_zips.py  extract_and_delete_zips.py  extract_zips.py  pyproject.toml  requirements.txt  test_download_zips.py
.github/workflows/: ci.yml
input/: proxy-list-example.txt
