[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "film-grab-downloader"
version = "0.1.0"
description = "Download and extract movie galleries from film-grab.com"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "roperi" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.3.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
film-grab-download = "download_zips:main"
film-grab-extract = "extract_and_delete_zips:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"
